[gd_scene load_steps=3 format=2]

[ext_resource path="res://Levels/LevelGate.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.6736, 5.98121 )

[node name="LevelGate" type="Area2D" groups=[
"LevelGates",
]]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14, 6 )
shape = SubResource( 1 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 14, 15.5367 )

[connection signal="body_entered" from="." to="." method="_on_LevelGate_body_entered"]
